# mpfst-eeg-jacobian

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-lock.txt  setup.cfg
configs/: canonical_meltdown_default.yaml  dryad_flip_default.yaml  eegmmidb_default.yaml
data/: README.md  README_DATA.md
data/eegmmidb_all_theta_abg_vq035/: subject_tail_metrics.csv  summary_manifest.csv
data/flip_example1_vlPFC_mpfst/: jacobian_metrics.json
data/vflip2_raw_mpfst/: jacobian_metrics.json
notebooks/: 01_canonical_meltdown_demo.ipynb  01_demo_physionet.ipynb
outputs/publication_demo/: jacobian_metrics.json
scripts/: convert_dryad_lfp_to_npy.py  download_monkey_eeg_template.py  pool_avalanche_tails.py  run_eegmmidb_batch.py  run_full_pipeline.py
src/mpfst_eeg_jacobian/: __init__.py  avalanches.py  coherence.py  illusions_field.py  jacobian.py  meltdown_events.py  meltdownfrac.py  occupant_fields.py  pipeline.py  plotting.py  preprocessing.py  utils.py
src/mpfst_eeg_jacobian.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_all.py
